# playground-Agent-Development-Kit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_agent_example.py  demo.py  getting_started.ipynb  server.py
scripts/: setup.py
src/adk/: __init__.py
src/adk/agents/: __init__.py
src/adk/config/: __init__.py
src/adk/utils/: __init__.py
tests/: test_basic.py
